Fixed cloudbuild file

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,5 +4,5 @@ steps:
   - name: 'gcr.io/cloud-builders/npm'  
     args: ['run', 'build']
   - name: 'gcr.io/cloud-builders/gcloud'  
-    args: ['app', 'deploy'] 
-    timeout: "300s"
+    args: ['app', 'deploy', 'app.yaml'] 
+  timeout: "300s"
