--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,5 +4,7 @@ steps:
 - name: 'gcr.io/cloud-builders/npm'  
   args: ['run', 'build']
 - name: 'gcr.io/cloud-builders/gcloud'  
-  args: ['app', 'deploy', 'app.yaml'] 
+  args: ['app', 'create', '--region=us-east1'] 
+- name: 'gcr.io/cloud-builders/gcloud'  
+  args: ['app', 'deploy'] 
 timeout: "300s"
