Fixed cloudbuild file with 'app create'

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,7 +4,7 @@ steps:
 - name: 'gcr.io/cloud-builders/npm'  
   args: ['run', 'build']
 - name: 'gcr.io/cloud-builders/gcloud'  
-  args: ['app', 'create', '--region=us-east1'] 
+  args: ['app', 'create'] 
 - name: 'gcr.io/cloud-builders/gcloud'  
   args: ['app', 'deploy'] 
 timeout: "300s"
