--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
+  "engines": {
+    "node": "8.x"
+  },
   "name": "meteo",
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "start": "node src/server/index.js",
     "serve": "nodemon --exec 'vue-cli-service serve'",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
