Created 'client' folder for keeping FE and BE as much separated as possible

--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "name": "meteo",
   "version": "0.1.0",
   "private": true,
-  "main": "src/server/index.js",
+  "main": "src/server",
   "scripts": {
-    "start": "node src/server/index.js",
-    "serve": "nodemon --exec 'vue-cli-service serve'",
-    "build": "vue-cli-service build",
+    "start": "node src/server",
+    "serve": "nodemon --exec 'vue-cli-service serve src/client/main'",
+    "build": "vue-cli-service build src/client/main",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
