--- a/gcloud/app.yaml
+++ b/gcloud/app.yaml
@@ -3,9 +3,13 @@
 
 # [START app_yaml]
 runtime: nodejs10
-instance_class: F1
-
-resources:
-  cpu: .2
-  memory_gb: 0.5
-  disk_size_gb: 10
+handlers:
+  # Serve all static files with urls ending with a file extension
+- url: /(.*\..+)$ 
+  static_files: dist/\1
+  upload: dist/(.*\..+)$
+  # catch all handler to index.html
+- url: /.*
+  static_files: dist/index.html
+  upload: dist/index.html
+# [END app_yaml]
