--- a/app.yaml
+++ b/app.yaml
@@ -4,6 +4,9 @@
 # [START app_yaml]
 runtime: nodejs10
 handlers:
+  #App
+- url: /api/.*
+  script: auto
   # Serve all static files with urls ending with a file extension
 - url: /(.*\..+)$ 
   static_files: dist/\1
