Added app.js in an attempt to make the app work on Google AppEngine

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "node src/server",
+    "start": "node app.js",
     "dev": "nodemon --exec 'vue-cli-service serve src/client/main'",
     "build": "vue-cli-service build src/client/main",
     "lint": "vue-cli-service lint"
