--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "luxon": "^1.17.2",
     "node-fetch": "^2.3.0",
     "register-service-worker": "^1.6.2",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-directive-tooltip": "^1.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
